# whylabs-toolkit

./: .bumpversion.cfg  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: publish.yaml  release.yaml  toolkit-ci.yaml
examples/: example_api_break.py  example_entity_schema.py  example_monitor_config.py  example_monitor_schema_models.py  presets.md
examples/example_notebooks/: existing code gen.ipynb  manual code gen.ipynb
tests/: conftest.py  test_entity_schema.py  test_model.py  test_monitor_config.py  test_smoke.py  test_something.py
tests/helpers/: test_config.py  test_config_types.py  test_dataset_profiles.py  test_entity_schema.py  test_model.py  test_monitor_helpers.py  test_smoke.py  test_utils.py
tests/monitor/manager/: test_builder.py  test_credentials.py  test_manager.py  test_monitor_setup.py
whylabs_toolkit/container/: config_types.py
whylabs_toolkit/helpers/: README.md  client.py  config.py  dataset_profiles.py  models.py  monitor_config.py  monitor_helpers.py  schema.py  utils.py
whylabs_toolkit/monitor/: __init__.py
whylabs_toolkit/monitor/builder/: README.md  builder.py  configs.py  credentials.py  example_monitor.py  manager.py
whylabs_toolkit/monitor/manager/: README.md  __init__.py  builder.py  credentials.py  manager.py  monitor_setup.py
whylabs_toolkit/monitor/models/: __init__.py  column_schema.py  commons.py  document.py  monitor.py  segments.py  utils.py
whylabs_toolkit/monitor/models/analyzer/: __init__.py  algorithms.py  analyzer.py  baseline.py  targets.py
whylabs_toolkit/monitor/schema/: schema.json
whylabs_toolkit/monitor_schema/: __init__.py
whylabs_toolkit/monitor_schema/models/: __init__.py  column_schema.py  commons.py  document.py  monitor.py  segments.py
whylabs_toolkit/monitor_schema/models/analyzer/: __init__.py  algorithms.py  analyzer.py  baseline.py  targets.py
whylabs_toolkit/utils/: granularity.py
