[tool.poetry]
name = "whylabs-toolkit"
version = "0.0.17"
description = "Whylabs CLI and Helpers package."
authors = ["Murilo Mendonca <murilommen@gmail.com>", "Anthony Naddeo <anthony.naddeo@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "whylabs_toolkit/**/*.py"}]
include = ["whylabs_toolkit/monitor/schema/schema.json"]

[tool.poetry.dependencies]
python = "^3.8"
whylabs-client = "0.6.0"
pydantic = "^1.10.4"
whylogs = "^1.1.26"
jsonschema = "^4.17.3"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.1"
pytest = "^7.2.0"
black = "^22.10.0"
mypy = "~1.0.1"
bumpversion = "^0.6.0"

[tool.black]
line-length = 140

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 140
